--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,6 @@
-aiogram
-loguru
-python-dotenv
+aiohttp~=3.6.2
+loguru~=0.5.3
+python-dotenv~=0.14.0
 tortoise-orm
-python-dateutil
+python-dateutil~=2.8.1
+aiogram~=2.10.1
