--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -6,3 +6,14 @@ services:
     restart: always
     build: .
     env_file: .env
+    volumes:
+      - type: "mount"
+        source: "/home/user/log/world/"
+        target: "/log"
+      - type: "mount"
+        source: "/home/user/sqlite/world"
+        target: "/db_data"
+
+      - type: "mount"
+        source: "/home/user/world_lucky_bets_bot/jsons"
+        target: "/jsons"
