--- a/requirements.txt
+++ b/requirements.txt
@@ -5,4 +5,5 @@ tortoise-orm
 python-dateutil~=2.8.1
 aiogram~=2.11.2
 git+https://github.com/bomzheg/openexchangerates@master
-pyyaml
+pyyaml~=5.4.1
+openpyxl~=3.0.6
