--- a/requirements.txt
+++ b/requirements.txt
@@ -3,7 +3,7 @@ loguru~=0.5.3
 python-dotenv~=0.15.0
 tortoise-orm
 python-dateutil~=2.8.1
-aiogram~=2.18
+git+https://github.com/bomzheg/aiogram@dev-2.x-default-protected-content
 git+https://github.com/bomzheg/openexchangerates@master
 pyyaml~=5.4.1
 openpyxl~=3.0.6
